Adapter: generalize parameter check for importer